--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@react-spring/web": "^9.7.4",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
     "autoprefixer": "^10.4.19",
@@ -17,16 +18,21 @@
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-spring": "^9.7.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.7.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.7.0",
+    "eslint": "9.x",
     "eslint-config-next": "^14.2.5",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.8.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^7.17.0"
   }
 }
