--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -18,8 +18,7 @@
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18",
-    "react-spring": "^9.7.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
